gcc/testsuite/objc.dg/property/property-neg-2.m
/* { dg-do compile } */

@interface Bar
@end

@implementation Bar
@property int FooBar; /* { dg-error "property declaration not in @interface or @protocol context" } */
@end
